# t1

./: .gitignore  CMakeLists.txt  README.md
doc/: Doxyfile
src/: CMakeLists.txt  main.cpp
src/capture/: capture.h  factory.cpp  factory.h  image.cpp  image.h  video.cpp  video.h
src/similar/: calculation.cpp  calculation.h
test/: CMakeLists.txt  capture_test.cpp  similar_test.cpp
